assets/stylesheets/overrides.style.css
dd img {
  float: left;
  height: 36px;
  margin-right: 10px;
}

#header {
  background: none;
  background-color: #343940;
  border-top: 2px solid #464B52;
}

#header .nav a {
  color: #C3C3C3;
}

#header .nav .index, #header .nav .index a {
  background-color: #2A8008;
  background-image: none;
  color: #fff;
}

#guides {
  background-color: #2A8008;
  color: #3C9936;
}

#guides hr {
  background-color: #5FBB58;
}

#guides dl dt {
  color: #5FBB58;
  letter-spacing: 0.05em;
  font-weight: bold;
}

#guides dl dd {
  text-indent: -10px;
  margin-left: 18px;
}

#mainCol a, #subCol a, #feature a, a, a:link, a:visited {
  color: #0A6008;
}

#header h1 {
  background-image: url(../images/logo.png);
  background-size: auto 120px;
  background-position: -25px -25px;
  overflow: visible
}

.guide tt, .guide code {
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  text-shadow: #fff 1px 1px 1px;
  border-radius: 5px;
  background-color: rgba(0,0,0,0.05);
  border: 1px solid #ddd;
  padding: 1px 3px;
}

div.filename {
  padding-top: 5px;
}

